style.css
/* ... */
form.contact-form button.submit-form:hover {
    box-shadow: rgba(44, 44, 187, .35) 0 -25px 18px -14px inset, rgba(44, 44, 187, .25) 0 1px 2px, rgba(44, 44, 187, .25) 0 2px 4px, rgba(44, 44, 187, .25) 0 4px 8px, rgba(44, 44, 187, .25) 0 8px 16px, rgba(44, 44, 187, .25) 0 16px 32px;
    transform: translateY(5px)
}

form.contact-form .buttons {
    display: flex;
    flex-direction: column;
    gap: 15px;
    align-items: center;
    margin: auto 0px;
    width: 100%;
}

form.contact-form label {
    font-family: 'Poppins', sans-serif;
    font-size: 20px;
    margin-top: 10px;
    margin-left: 10px;
}

.form-container {
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    width: 300px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
.contact-form-container .links {
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-wrap: nowrap;
    width: 95%;
    justify-content: space-between;
    align-items: center;
}

.contact-form-container .links button {
    border: 0;
    border-radius: 12px;
    color: #FFFFFF;
    cursor: pointer;
    display: inline-block;
    font-family: -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    line-height: 3;
    outline: transparent;
    padding: 3px 5px;
    text-align: center;
    text-decoration: none;
    transition: box-shadow 0.2s ease-out;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    white-space: nowrap;
    width: 110px;
}

.contact-form-container .links button.linkedin {
    background: linear-gradient(to bottom right, #0077b5, #005582);
}

button.linkedin:not([disabled]):focus,
button.linkedin:not([disabled]):hover {
    box-shadow: 0 0 .25rem rgba(0, 119, 181, 0.5), -.125rem -.125rem 1rem rgba(0, 119, 181, 0.5), .125rem .125rem 1rem rgba(0, 119, 181, 0.5);
}

.contact-form-container .links button.github {
    background: linear-gradient(to bottom right, #000000, #434343);
}

button.github:not([disabled]):focus,
button.github:not([disabled]):hover {
    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(0, 0, 0, 0.5), .125rem .125rem 1rem rgba(0, 0, 0, 0.5);
}

.contact-form-container .links button.instagram {
    background: linear-gradient(to bottom right, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
}

button.instagram:not([disabled]):focus,
button.instagram:not([disabled]):hover {
    box-shadow: 0 0 .25rem rgba(188, 24, 136, 0.5), -.125rem -.125rem 1rem rgba(188, 24, 136, 0.5), .125rem .125rem 1rem rgba(188, 24, 136, 0.5);
}

.contact-form-container .links button.resume {
    background: #ff0000;
}

button.resume:not([disabled]):focus,
button.resume:not([disabled]):hover {
    box-shadow: 0 0 .25rem rgba(255, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(255, 0, 0, 0.5), .125rem .125rem 1rem rgba(255, 0, 0, 0.5);
}

@media (max-width: 600px) {
    .title-container {
        padding: 2rem 30px;
        width: 70%;
    }

    .title-container h1 {
        font-size: 30px;
    }
    
    .title-container p {
        font-size: 15px;
    }

    .title-container .nav-buttons {
        flex-direction: column;
        gap: 10px;
    }

    .container {
        padding: 30px 20px;
        width: 95%;
    }

    .container h2 {
        font-size: 25px;
    }

    .container p {
        font-size: 13px;
    }

    .project-container {
        flex-direction: column;
        align-items: center;
        gap: 20px;
        flex-wrap: nowrap;
    }

    .project-card {
        min-width: 0px;
        width: 100%;
    }

    .project-card h2 {
        font-size: 20px;
    }

    .project-card p {
        font-size: 14px;
    }

    .project-card button {
        font-size: 12px;
        padding: 10px 15px;
    }

    .tags {
        justify-content: space-between;
    }

    .tags span {
        padding: 5px 10px;
        font-size: 13px;
    }

    .contact-form-container {
        margin: 20px 0px;
    }

    form.contact-form {
        flex-direction: column;
        gap: 20px;
    }

    form.contact-form .inputs {
        gap: 10px;
    }

    form.contact-form button.submit-form {
        padding: 15px 20px;
        font-size: 14px;
        width: 100%;
    }

    form.contact-form .links {
        flex-direction: row;
        gap: 10px;
        width: 100%;
    }

    form.contact-form button.instagram,
    form.contact-form button.github,
    form.contact-form button.linkedin {
        padding: 2px 0px;
        font-size: 12px;
    }

    footer {
        font-size: 16px;
        padding: 15px 0px;
    }
}

